--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,9 @@ p.dark{
 .hred:hover{
     color: #BD0F14;
 }
-
+.white{
+    color: #ffffff;
+}
 .blue{
     color: #253150;
 }
@@ -129,17 +131,30 @@ header{
     display: block;
     background:#BD0F14;
 } 
-.nav-item{
-    padding: 0 15px;    
-    max-width: 230px;
+.nav-item {
+    padding: 0 15px;
+    max-width: 170px;
     width: 100%;
+    text-align: center;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
-.navbar-light .navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link,.navbar-light .navbar-nav .nav-link.dropdown {
 	color: #253150;
     width: 100%;
     display: block;
-    min-width: max-content;
-    text-align: center;
+    min-width: min-content;
+    text-align: center;  
+    max-width: 170px;       
+}
+.dropdown-item{
+    color: #253150;
+}
+.dropdown-item:hover, .dropdown-item:focus {
+    color: #BD0F14;
+    background-color: #e9ecef;
 }
 header .button{
     background: #253150;
@@ -233,6 +248,12 @@ section{
     position: relative;
     z-index: 0;
 }
+.banner img{
+    width: 100%;
+}
+.inicio{
+    background-image: url(../img/home/banner_home.png);
+}
 .puntos{
     background-image: url(../img/puntos/banner_puntos-servicio.png);
 }
@@ -251,9 +272,6 @@ section{
 .arrendatario{
     background-image: url(../img/arrendatario/banner_arrendatario.png);
     background-color: #F8F8F8;
-}
-.propietario{
-    background-image: url(../img/propietario/banner_propietario_1.png);
 }
 .somos{
     background-image: url(../img/somos/banner_quienesSomos_1.png);
@@ -277,6 +295,22 @@ section{
 	border-radius: 3px;
 	width: max-content;	
 }
+.bluebox.home{
+    max-width: 580px;
+    width: auto;
+}
+.bluebox.home p{
+    text-align: left;
+    line-height: 1em;
+    padding: 0.5em ;
+    width: 90%;
+}
+.bluebox.home p small{
+    display: block;
+    color: #B0B6BA;
+    font-size: 16px;
+    text-align: left;
+}
 .bluebox.mt{
     margin-top: 4.2em;
 }
@@ -293,6 +327,295 @@ section{
     letter-spacing: 1px;
 }
 /* Componentes páginas*/
+.sios{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 20;
+}
+.sios .mensaje {
+    background-color: #016D38;
+    display: none;    
+    margin: 0;
+    padding: 4.5px 20px;
+    right: 70px;
+    position: absolute;
+    width: 250px;
+    border-radius: 10px 0 0 10px;
+}
+.sios .mensaje a{
+    font-family:'RobotoBold';
+    color: #FFDC5D;
+    text-decoration: none;
+    font-style: italic;
+    text-align: right;
+    display: block;
+}
+.sios .mensaje span{    
+    color: #fff;
+}
+.banner-slide{
+    height: 630px;
+}
+.banner-slide .slick-dots{
+	display: flex !important;
+	justify-content: center;
+	margin-top: -100px;
+	padding: 1rem 0;	
+	list-style-type: none;
+    position: relative;
+    z-index: 10;				
+}
+.banner-slide .slick-dots li,
+.slider-modalidades .slick-dots li,
+.entradas-blog .slick-dots li {
+    margin: 0 0.25rem;
+}
+.banner-slide .slick-dots button,
+.slider-modalidades .slick-dots button,
+.entradas-blog .slick-dots button {
+    display: block;
+    width: 30px;
+    height: 3px;
+    padding: 0;    
+    border: none;    
+    background-color: #BBBBBB;    
+    text-indent: -9999px;
+}
+.banner-slide .slick-dots li.slick-active button,
+.slider-modalidades .slick-dots li.slick-active button,
+.entradas-blog .slick-dots li.slick-active button {
+    background-color: #BD0F14;
+}
+.slider-modalidades{
+    width: 100%;
+}
+.slider-modalidades .slick-dots{
+    display: flex !important;
+	justify-content: center;	
+	padding: 1rem 0;	
+	list-style-type: none;
+    position: absolute;
+    z-index: 10;
+    bottom: -40px;
+}
+.entradas-blog .slick-dots {
+	display: flex !important;
+	justify-content: center;	
+	padding: 1rem 0;	
+	list-style-type: none;
+    position: relative;
+    z-index: 10;				
+}
+
+.banner-content{
+    width: 100%;
+    position: relative;
+}
+.banner-content img{
+    width: 100%;
+}
+.home-minibox{
+    max-width: 375px;
+    width: 100%;
+    margin: 0 1em;
+}
+.home-minibox .gray-box{
+    background-color: #F8F8F8;
+    border: 1px solid #B0B6BA;
+    border-radius: 3px;
+    width: 90%;
+    margin: -2em auto 0;
+    position: relative;
+    z-index: 1;
+    height: 240px;
+}
+.home-minibox h5{
+    font-family:'GothamBlack';
+    position: relative;
+    width: max-content;
+    margin: 0 auto;
+    font-size: 22px;
+    padding: 1.2em 0;
+}
+.home-minibox h5::after{
+    content: '';
+    position: absolute;    
+    width: 25px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;    
+    top: 2.4em;
+}
+.home-minibox .gray-box p{
+    width: 75%; 
+    margin: 1em auto;       
+}
+.gray-bg{
+    background-color: #F8F8F8;
+}
+.estudio-home{
+    max-width: 1170px;
+    margin: 0 auto;
+    border: 1px solid #F8F8F8;
+    border-radius: 3px;
+    height: 340px;
+    position: relative;
+    z-index: 2;
+}
+.estudio-home h4{
+    font-size: 30px;
+    position: relative;    
+}
+.estudio-home h4::after{
+    content: '';
+    position: absolute;    
+    width: 45px;
+    height: 3px;
+    background: #BD0F14;
+    border-radius: 2px;
+    left: 0;    
+    top: 1.2em;
+}
+.estudio-home p{
+    max-width: 435px;
+    padding-top: 1.5em;
+}
+.estudio-home img{
+    max-width: 300px;
+    margin: auto;
+}
+.estudio-home ul.h-menu{
+    list-style: none;
+    display: inline-flex;
+    background-color: #FFFFFF;
+    border: 1px solid #B0B6BA;
+    border-radius: 5px;
+    width: 90%;
+    padding: 1em;
+}
+.estudio-home .dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0em;
+    content: url(../img/down.png);
+    border: none;
+}
+.estudio-home .af-arrow::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: middle;
+    margin-left: 1em;
+    content: url(../img/right.png);
+    border: none;
+}
+.estudio-home ul.h-menu li{
+    text-align: center;
+}
+.estudio-home ul li a{
+    font-family: 'GothamBold';
+    color: #253150;
+    text-decoration: none;
+    font-size: 13px;
+    padding: 0 1em;
+}
+.bg-edificios{
+    background-image: url(../img/edificios.png);
+    height: 200px;
+    background-size: contain;
+    background-repeat: repeat-x;
+    background-position-x: center;
+    margin-top: -150px;
+    position: relative;
+    z-index: 0;
+    max-width: 1620px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.icon-space{
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 5em 0;
+}
+.blue-bg{
+    background-color: #253150;
+    width: 100%;
+    margin: 0;
+    border-radius: 5px;
+}
+.h-250{
+    height: 250px;
+}
+.blue-bg h4{
+    color: #ffffff;
+    padding: 2em 0 1em 2em;    
+}
+.blue-bg h4 span{
+    background-color: #BD0F14;
+    width: max-content;
+    padding: 0 1em;
+}
+.btn-gray{
+    font-family: 'GothamBold';
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid #B0B6BA;
+    color: #B0B6BA;
+    padding: 1em ;
+    border-radius: 0.4em;
+    text-decoration: none;
+    display: block;
+    max-width: 170px;
+    font-size: 14px;
+    text-align: center;
+}
+.btn-gray:hover{
+    background: #B0B6BA;
+    color: #ffffff;
+}
+.icon-box{
+    border-radius: 5px;
+    border: 1px solid #B0B6BA;   
+    height: 100%; 
+}
+.icon-box img{
+    width: 64px;
+    padding-top: 2em;
+    padding-bottom: 1em;
+}
+.icon-box h5{
+    font-size: 22px;
+}
+.icon-box p{
+    max-width: 295px;
+    margin: 0 auto;
+    text-align: center;
+}
+.blog{
+    padding-bottom: 100px;
+}
+.h-450{
+    height: 450px;
+}
+.mt-n200{
+    margin-top: -400px;
+}
+.blog-card{
+    max-width: 370px;
+    margin: 0 1em;
+}
+.blog-card img{
+    width: 100%;
+}
+.blog-card .text-card{
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 2px 0px #707070;
+}
+.text-card h5{
+    font-size: 20px;
+    color: #253150;
+    padding: 1em;
+}
 .accordion-button{
     padding: 1.5rem 1.25rem;
 }
@@ -685,6 +1008,10 @@ ul.icons li.cel{
 }
 ul.icons li.danos{
     background-image: url(../img/propietario/icon_danos.svg);
+    background-position-x: 10px;
+}
+ul.icons li.emerg{
+    background-image: url(../img/propietario/emerg.png);
     background-position-x: 10px;
 }
 ul.icons li.servicios{
@@ -1213,6 +1540,10 @@ label{
 }
 .red-outline-btn:hover{
     color: #BD0F14;
+    background-color: #b0b6ba27;
+}
+.b0-bg{
+    background-color: #b0b6ba27;
 }
 .est-arrendatario{
     height: 300px;
@@ -1415,7 +1746,7 @@ footer .lineav{
     width: 100%;
     background: #253150;
     font-size: 0.6em;
-    padding-top: 0.8em;
+    padding-top: 1.1em;
 }
 .btn-buscar{
     display: none;
@@ -1426,6 +1757,18 @@ footer .lineav{
     }
     .lineav{
         display: none !important;
+    }
+    .navbar-brand img {
+        width: 100%;
+    }
+    .banner-slide {
+        height: 500px;
+    }
+    .banner-slide .slick-dots {
+        margin-top: 0px;
+    }
+    .banner {
+        height: 380px;
     }
 }
 @media screen and (max-width:1280px){
@@ -1454,9 +1797,40 @@ footer .lineav{
     }
     .slide{
         margin: 0 1em;
+    }  
+      
+    .estudio-home h4{
+        padding: 0 20px;
+    }
+    .estudio-home h4::after {
+        left: 20px;
+    }
+    .estudio-home p{
+        padding: 20px 20px 0 20px;
+    }
+    .estudio-home ul.h-menu{
+        margin-left: 20px;
+    }
+    .banner-slide {
+        height: 440px;
+    }
+    .banner-slide .slick-dots{
+        margin-top: 0;
+    }
+    .icon-box {
+        height: auto;
+        margin: 1rem 0 0.5em;
+        min-height: 250px;
+    }
+    header .button{
+        width: 220px;
     }
 }
-
+@media screen and (min-width:992px) and (max-width:1090px){
+    header .button{
+        width: 165px;
+    }
+}
 @media screen and (max-width:1024px) {
     .navbar-brand{
         width: 200px;
@@ -1494,7 +1868,7 @@ footer .lineav{
         position: fixed;
         top: 0;
         width: 100%;
-        z-index: 5;
+        z-index: 15;
     }
     .logo-mb{
         display: block;
@@ -1519,7 +1893,7 @@ footer .lineav{
         height: 100%;
         width: 0;
         position: fixed;
-        z-index: 5;
+        z-index: 15;
         top: 65px;
         left: 0;
         background-color: #FFFFFF;
@@ -1570,6 +1944,18 @@ footer .lineav{
     .sidenav .accordion-item{
         border: none;
         margin-bottom: 3px;
+    }
+    .sidenav .accordion-header.link {
+        border: none;
+        margin-bottom: 3px;
+        padding: 0.8rem 1.2rem;
+        background: #F8F8F8;
+    }
+    .sidenav .accordion-header.link a{
+        color: #253150;
+    }
+    .sidenav .accordion-header.link a:hover{
+        color: #BD0F14;
     }
     .sidenav ul{
         list-style: none;
@@ -1683,6 +2069,10 @@ footer .lineav{
     }
 }
 @media screen and (max-width:991px) {
+    .banner {        
+        height: 480px;        
+        margin-top: 100px;
+    }
     .input-group:not(.has-validation) > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu), .input-group:not(.has-validation) > .dropdown-toggle:nth-last-child(n+3) {
         border-top-right-radius: 0.25rem;
         border-bottom-right-radius: 0.25rem;
@@ -1783,6 +2173,71 @@ footer .lineav{
     .indicador {        
         margin-top: 100px;
     }
+    .home-minibox{
+        max-width: 375px;
+        margin: 0 1em;
+        padding: 2em 0;
+    }
+    .sios{        
+        bottom: 50%;        
+    }
+    .banner-slide{
+        height: auto;
+    }
+    .banner-slide .slick-dots {
+        margin-top: 0px;				        
+    }
+    .bluebox.home {
+        top: 85%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+    }
+    .bluebox.home p {        
+        width: 100%;
+    }
+    .estudio-home{
+        height: auto;
+    }
+    
+    .estudio-home ul.h-menu {
+        list-style: none;
+        display: block;
+        background-color: transparent;
+        border: none;
+        border-radius: 5px;
+        width: 95%;
+        padding: 1em;
+    }
+    .estudio-home ul.h-menu li{
+        background-color: #FFFFFF;
+        border: 1px solid #B0B6BA;
+        border-radius: 5px;
+        padding: 0.5em;
+        margin: 0.5em auto;
+    }
+    .estudio-home ul.h-menu li .dropdown-menu{
+        width: 100%;
+        transform: translate3d(0px, 23px, 0px) !important;
+    }
+    .estudio-home ul.h-menu li .dropdown-menu li {
+        background-color: #FFFFFF;
+        border: none;
+        border-radius: 5px;
+        padding: 0.5em;
+        margin: 0.5em auto;        
+    }
+    .blog-card,.home-minibox img{
+        margin: 0 auto;
+    }
+    .blog-card,.home-minibox {
+        max-width: none;
+        margin: 1em;
+    }
+    .blog-card,.home-minibox .gray-box{
+        max-width: calc(375px - 10%);
+    }
+    
 }
 @media screen and (max-width:767px){
     footer .lineav {
@@ -1827,10 +2282,18 @@ footer .lineav{
         margin-left: 1em;
         margin-right: 1em;
     }
-    .carousel-x4 .slick-prev {
-        position: absolute;
+    .in-slide{
+        margin: 0 auto;
+        display: block;
+    }
+    .carousel-x4 .slick-prev {        
         top: calc(100% - 25px);
         left: calc(50% - 55px);
+        transform: translate(-50%, -50%);
+    }
+    .carousel-x4 .slick-next {        
+        top: calc(100% - 25px);
+        left: calc(50% + 50px);
         transform: translate(-50%, -50%);
     }
     .info-pago{
@@ -1857,6 +2320,56 @@ footer .lineav{
     .submenu-dos .nav-link.active span {
         width: 25%;
     }
+    .banner-slide {
+        height: auto;
+    }
+    .entradas-blog{
+        flex-wrap: wrap;
+    }
+    .blog-card {
+        max-width: 370px;
+        margin: 1em;
+    }
+    .icon-box {
+        height: auto;        
+        min-height: auto;
+        display: inline-flex;
+        width: 100%;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+    }
+    .icon-box .bloque{
+        width: 70%;
+    }
+    .icon-box img{
+        padding: 1em 0;
+    }
+    .icon-box h5{
+        padding-top: 1em;
+    }
+    .icon-box p{
+        margin: 0;
+        text-align: left;
+        padding-bottom: 1.5em;
+    }
+    .blue-bg h4 {        
+        text-align: center;
+        padding: 2em 0 1em;
+    }
+    .blue-bg h4 span {
+        margin: 0.2em auto;
+    }
+    .slick-slide img {        
+        margin: 0 auto;
+    }
+    .banner{
+        position: relative;        
+        background-position: top;
+        height: 380px;        
+        z-index: 0;
+        margin-top: 106px;
+    }
 }
 @media screen and (max-width:600px) {
     h1{
@@ -1868,13 +2381,7 @@ footer .lineav{
     h3{
         font-size: 1.4em;
     }
-    .banner{
-        position: relative;        
-        background-position: top;
-        height: 450px;        
-        z-index: 0;
-        margin-top: 106px;
-    }
+    
     .miga a {        
         font-size: 0.75em;        
     }
@@ -1944,6 +2451,7 @@ footer .lineav{
     .recomendacion p {        
         max-width: 100%;
     }
+    
 }
 
 @media screen and (max-width:480px){
