--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,46 @@ section{
 .banner-slide{
     height: 630px;
 }
+.mini-slider{
+    width: 100%;
+    height: 425px;
+}
+.mini-slide{
+    margin: 0 auto;
+    width: 100%;
+    height: 425px;
+}
+.mini-slide .block-slide{
+    max-width: 375px;
+    width: 100%;
+    margin: 0 auto;
+    height: 420px;
+}
+.block-slide .text{
+    border-left: 1px solid #B0B6BA;
+    border-right: 1px solid #B0B6BA;
+    border-bottom: 1px solid #B0B6BA;
+    height: 275px ;
+}
+.block-slide .text p{
+    max-height: 140px;
+    overflow-y: hidden;
+    font-size: 1em;
+}
+.mini-slide .block-slide h5{
+    font-family: 'GothamBlack';    
+    width: 320px;
+    margin: 0 auto;
+    font-size: 22px;
+    padding: 1em 0;
+}
+.mini-slide .block-slide p{
+    width: 320px;
+    margin: 0 auto;
+}
+.cajon-lateral{
+    max-width: 370px;
+}
 .banner-slide .slick-dots{
 	display: flex !important;
 	justify-content: center;
@@ -1280,6 +1320,10 @@ p.nproductos{
     margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
+}
+.submenu-link[aria-selected="false"] {
+    display: block !important;
+    height: auto;
 }
 ul.submenu{
     height: 70px;
