--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 @font-face {
     font-family:'GothamBlack';
-    src:url('../fonts/Gotham-Black.woff');
+    src:url('../fonts/Gotham-Black.otf');
 }
 @font-face {
     font-family:'GothamMedium';
