--- a/css/estilo.css
+++ b/css/estilo.css
@@ -285,6 +285,10 @@ section.brn{
     color: #fff;
     text-align: center;    
     width: max-content;
+    max-width: 450px;
+}
+.bluebox.mt{
+    margin-top: 4.2em;
 }
 .bluebox h2 {
     font-family: 'GothamBold';
@@ -622,14 +626,7 @@ section.brn{
     z-index: 10;
     bottom: -70px;
 }
-.slider-servicios .slick-dots {
-	display: flex !important;
-	justify-content: center;	
-	padding: 1rem 0;	
-	list-style-type: none;
-    position: relative;
-    z-index: 10;				
-}
+
 /*Propietario*/
 .proteger{
     background-image: url(../img/bg-dg.png);
@@ -771,7 +768,7 @@ h2.beneficios::after{
 .in-slide {
     max-width: 270px;
     background-color: #F8F8F8;
-    border: 1px solid #B0B6BA;
+    border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 6px 6px 0 0;
     height: 290px;
     margin: auto;
@@ -824,6 +821,67 @@ h2.beneficios::after{
     padding: 0 0.5em;
     color: #FFFFFF;
     text-decoration: none;
+}
+/*Intermediarios*/
+.fondo-servicios{
+    height:430px ;    
+}
+.slider-servicios{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin-top: -460px;
+    margin-bottom: 100px;
+}
+.slider-servicios .in-slide {
+    width: 275px;    
+    height: 350px;
+    border-radius: 5px;
+}
+.slider-servicios .slick-dots {	
+	justify-content: center;	
+	padding: 1rem;	
+	list-style-type: none;
+    position: absolute;
+    z-index: 10;	
+    bottom: -70px;			
+    left: 50%;
+    display: flex !important;
+}
+.flotante{
+    display: inline-flex;
+    margin: 1em 1em;
+}
+
+.slider-servicios .in-slide p{
+    max-width: 260px;
+}
+.in-slide h2{
+    font-size: 1.25rem;
+    margin: 1em auto;
+}
+.more{
+    position: absolute;
+    bottom: 10px;
+    right: 40px;
+}
+.interm p{
+    max-width: 350px;
+    margin-top: 2em;
+}
+.interm h3{
+    max-width: 250px;
+}
+.productos .in-slide{
+    background: #ffffff;
+    height: auto;
+    max-height: 315px;
+    min-height: 315px;
+}
+.productos .in-slide p {
+    margin: 1em;
+    text-align: left;
+
 }
 /*Acordion*/
 .accordion-button{
@@ -905,7 +963,7 @@ section.titulo{
     background: #b0b6ba3a;
 }
 .bordered-box{
-    border: 1px solid #B0B6BA;
+    border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .wb-l{
     border-left: none !important;
